# kartopu_blog

./: .dockerignore  .env  .env.prod  .gitignore  .python-version  AGENTS.md  Dockerfile  GEMINI.md  README.md  bakim.html  codex.patch  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: build_for_docker_hub.yml  merge_dev_to_main.yml
accounts/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_last_name.py  0004_alter_user_last_name.py  0005_add_user_avatar_updated_at.py  0006_remove_user_avatar_updated_at.py  0007_alter_user_email.py
accounts/tests/: test_admin.py  test_apps.py  test_avatar.py  test_find_value.py  test_integration.py  test_models.py  test_signals.py  test_urls.py  test_views.py
blog/: admin.py  apps.py  cache_keys.py  feeds.py  models.py  pdf.py  popularity_queue.py  services.py  signals.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_category_blogpost_category.py  0003_tag_blogpost_tags_blogpost_blogpost_fts_gin.py  0004_blogpost_portfolio_snapshot.py  0005_alter_blogpost_portfolio_snapshot.py  0006_alter_category_options_alter_tag_options_and_more.py  0007_blogpost_portfolio_comparison.py  0008_alter_blogpost_content.py  (+24 more)
comments/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
config/: cache_keys.py  settings.py  test_settings.py  urls.py
core/: admin.py  cache_keys.py  context_processors.py  decorators.py  forms.py  helpers.py  imagekit.py  images.py  markdown.py  middlewares.py  mixins.py  models.py  signals.py  sitemaps.py  storage.py  tag_colors.py  test_context_processors.py  tests.py  urls.py  views.py
newsletter/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  test_direct_email_queue.py  tests.py  tokens.py  urls.py  views.py
portfolio/: admin.py  models.py  services.py  tests.py  urls.py  views.py
templates/: 403.html  404.html  base.html  robots.txt
(+243 files in other folders)
