[project]
name = "kartopu-blog"
version = "0.1.0"
description = "Financial blog project about FIRE and personal finance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.3.0",
    "cryptography>=46.0.3",
    "django~=6.0.0",
    "django-allauth>=65.13.1",
    "django-imagekit>=6.0.0",
    "django-ratelimit>=4.1.0",
    "django-types>=0.22.0",
    "gunicorn>=23.0.0",
    "markdown>=3.10",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.13",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "tinycss2>=1.5.1",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "django-upgrade>=1.29.1",
]
