[project]
name = "kartopu-blog"
version = "0.1.0"
description = "Financial blog project about FIRE and personal finance."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.3.0",
    "cryptography>=46.0.3",
    "django>=6.0.0",
    "django-imagekit>=6.0.0",
    "django-ratelimit>=4.1.0",
    "django-storages>=1.14.6",
    "django-types>=0.22.0",
    "gunicorn>=24.0.0",
    "markdown>=3.10",
    "boto3>=1.40.33",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "tinycss2>=1.5.1",
    "yfinance>=1.0",
    "django-cleanup>=9.0.0",
    "django-allauth[socialaccount]>=65.14.0",
    "psycopg[binary,pool]>=3.3.2",
    "brotli>=1.2.0",
    "django-redis>=6.0.0",
    "lz4>=4.4.5",
]

[dependency-groups]
dev = [
    "django-upgrade>=1.29.1",
]
